--- a/Css/style.css
+++ b/Css/style.css
@@ -86,6 +86,7 @@ justify-content: space-evenly;
 /* footer style */
 .footer {
     text-align: center;
+    margin-bottom: 10px;
 }
 
 footer>h2 {
@@ -136,7 +137,8 @@ img {
 @media (min-width: 420px) {
     img {
         max-width: 50%;
-        display: inline-block;
+        display: flex;
+        justify-content: space-evenly;
         align-items: center;
     }
 }
