--- a/Css/style.css
+++ b/Css/style.css
@@ -152,14 +152,10 @@ img {
     .sub-hero-image, .sub-hero-image-procent{
         display: flex;
     }
-    .sub-hero-image{
-        display: flex;
-        width: 600px;
-        height: 650px;
-    }
-    .sub-hero-image-procent{
+    .sub-hero-image, .sub-hero-image-procent{
         display: flex;
         width: 600px;
         height: 600px;
+        justify-content: baseline;
     }
 } 
