--- a/Css/style.css
+++ b/Css/style.css
@@ -48,7 +48,9 @@
     font-size: 25px;
     line-height: 30px;
     color: #000;
-    text-align: center;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 .flex-style{
@@ -131,7 +133,7 @@ img {
     max-width: 100%;
     display: flex;
 }
-/* media queri (adaptation) */
+/* media queries (adaptation) */
 
 /* for middle devices (tablets) */
 @media (min-width: 420px) {
