--- a/Css/style.css
+++ b/Css/style.css
@@ -35,6 +35,8 @@
     line-height: 30px;
     text-align: center;
     color: #000;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .sub-hero-image {
